feat(#33): Start re*implementing COMMAND